@@ -64,39 +64,39 @@ rm -f "${logfile_linux}"
 res_linux="$(echo "${ARC_GNU}")/results/linux-results-$(date -u +%F-%H%M)"
 mkdir ${res_linux}
 
-# Location of some files depends on endiannes
+# Location of some files depends on endianess
 if [ "${ARC_ENDIAN}" = "little" ]
 then
-    arc_linux_directory=arc-linux-uclibc
+    target_dir=arc-linux-uclibc
 else
-    arc_linux_directory=arceb-linux-uclibc
+    target_dir=arceb-linux-uclibc
 fi
 
 # Run tests
 status=0
-run_check ${bd_linux}     binutils            "${logfile_linux}" || status=1
-save_res  ${bd_linux}     ${res_linux} binutils/binutils     "${logfile_linux}" \
+run_check ${bd_linux} binutils "${logfile_linux}" || status=1
+save_res  ${bd_linux} ${res_linux} binutils/binutils "${logfile_linux}" \
     || status=1
-run_check ${bd_linux}     gas                 "${logfile_linux}" || status=1
-save_res  ${bd_linux}     ${res_linux} gas/testsuite/gas     "${logfile_linux}" \
+run_check ${bd_linux} gas "${logfile_linux}" || status=1
+save_res  ${bd_linux} ${res_linux} gas/testsuite/gas "${logfile_linux}" \
     || status=1
-run_check ${bd_linux}     ld                  "${logfile_linux}" || status=1
-save_res  ${bd_linux}     ${res_linux} ld/ld                 "${logfile_linux}" \
+run_check ${bd_linux} ld "${logfile_linux}" || status=1
+save_res  ${bd_linux} ${res_linux} ld/ld "${logfile_linux}" \
     || status=1
-run_check ${bd_linux}     gcc                 "${logfile_linux}" || status=1
-save_res  ${bd_linux}     ${res_linux} gcc/testsuite/gcc/gcc "${logfile_linux}" \
+run_check ${bd_linux} gcc "${logfile_linux}" || status=1
+save_res  ${bd_linux} ${res_linux} gcc/testsuite/gcc/gcc "${logfile_linux}" \
     || status=1
 echo "Testing g++..."
-save_res  ${bd_linux}     ${res_linux} gcc/testsuite/g++/g++ "${logfile_linux}" \
+save_res  ${bd_linux} ${res_linux} gcc/testsuite/g++/g++ "${logfile_linux}" \
     || status=1
 # libgcc tests are currently empty, so nothing to run or save.
-# run_check ${bd_linux}     target-libgcc       "${logfile_linux}"
-run_check ${bd_linux}     target-libstdc++-v3 "${logfile_linux}" || status=1
-save_res  ${bd_linux}     ${res_linux} \
-    ${arc_linux_directory}/libstdc++-v3/testsuite/libstdc++ "${logfile_linux}" \
+# run_check ${bd_linux} target-libgcc       "${logfile_linux}"
+run_check ${bd_linux} target-libstdc++-v3 "${logfile_linux}" || status=1
+save_res  ${bd_linux} ${res_linux} \
+    ${target_dir}/libstdc++-v3/testsuite/libstdc++ "${logfile_linux}" \
     || status=1
-run_check ${bd_linux_gdb} gdb                 "${logfile_linux}" || status=1
-save_res  ${bd_linux_gdb} ${res_linux} gdb/testsuite/gdb     "${logfile_linux}" \
+run_check ${bd_linux_gdb} gdb "${logfile_linux}" || status=1
+save_res  ${bd_linux_gdb} ${res_linux} gdb/testsuite/gdb "${logfile_linux}" \
     || status=1
 
 exit ${status}
